--- a/public/assets/css/style_ar.css
+++ b/public/assets/css/style_ar.css
@@ -55,3 +55,21 @@
 .head-message .head-name {
     padding-right: 20px;
 }
+.head-message {
+    -moz-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+.head-message .container{
+    -moz-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+.head-message .img {
+    -moz-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
