--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -227,10 +227,11 @@ a:hover, a:focus {
 /*-------------------------------end participate section style--------------------------------*/
 /*-------------------------------start welcome section style--------------------------------*/
 .welcome {
-    background: url(../img/test.jpg) no-repeat scroll center center;
+    background: url(../img/white-back2.jpg) no-repeat scroll center center;
     position: relative;
     z-index: 2;
     padding: 100px 0;
+    background-size: cover;
 }
 
 .welcome:before {
@@ -494,6 +495,9 @@ footer a:hover {
     color: #7b7b7b;
     line-height: 28px;
     margin-bottom: 0;
+}
+.history img{
+    border-radius: 15px;
 }
 
 /*-----------------------------------------------end history style-----------------------------*/
