--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -178,7 +178,7 @@ a:hover, a:focus {
 
 .participate a {
     color: black;
-    display:inline-block;
+    display: inline-block;
     width: 100%;
     height: 110%;
 }
@@ -189,7 +189,7 @@ a:hover, a:focus {
     border-radius: 10%;
     transition: all 200ms linear 0s;
     margin-top: 25px;
-    height: 275px;
+    height: 245px;
     border: 1px solid #ddd;
     overflow: hidden;
 }
@@ -498,8 +498,10 @@ footer a:hover {
     color: #7b7b7b;
     line-height: 28px;
     margin-bottom: 0;
+    text-align: justify;
 }
-.history img{
+
+.history img {
     border-radius: 15px;
 }
 
@@ -623,6 +625,7 @@ footer a:hover {
     font-family: 'Dubai-Regular';
     line-height: 140%;
     padding-right: 15px;
+    text-align: justify;
 }
 
 .head-message .media {
@@ -743,7 +746,7 @@ footer a:hover {
 
 .partners-list {
     padding: 40px 0 4px 0;
-    background-color: #1d2727;
+    background-color: rgba(8, 15, 32, 0.9);
     color: white;
 }
 
